# cli_todo_app

./: .gitignore  Cargo.toml  build.rs  schema.sql
queries/: crud.sql
src/: cornucopia.rs  main.rs  model.rs
